--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -44,7 +44,7 @@ The pore volume is calculated by random sampling of the accessible and inaccessi
 
 In most of the studies in this thesis, we will consider rigid structures interacting with guest adsorbates; the intramolecular interactions will not play any role in the simulations since the ionic, chemical or metallic  bonds between the atoms of a same molecule are predefined at a given set of distances and remain the same. As discussed in the final chapter, this approximation can generate discrepancies between the theoretical model and the experiments. However, since the goal is to achieve screening approaches like the ones introduced in the first chapter, adding flexibility in the intramolecular interactions would reduce considerably the size of the database that could be screened. For these reasons, the term ``interaction energy'' will designate the guest--host and guest--guest intermolecular interactions mainly --- host--host interactions would compromise the assumption on the rigidity of the framework.
 
-In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bonding ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the Van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows us to rank the different foreces according to their strength; and to complete the molecular interactions picture, we can add that the ionic and covalent bonding will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``Van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\autocite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\autocite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\autocite{london1930theorie,polanyi1932section} To quantify these interactions, we can consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $V\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases we are interested in, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
+In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bonding ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows us to rank the different foreces according to their strength; and to complete the molecular interactions picture, we can add that the ionic and covalent bonding will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\autocite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\autocite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\autocite{london1930theorie,polanyi1932section} To quantify these interactions, we can consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $V\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases we are interested in, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
 \begin{equation}\label{eq:keesom}
   V\e{K} = -\dfrac{\mu_1^2\mu_2^2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{ 1.5k\e{B}T}
 \end{equation}
@@ -56,9 +56,9 @@ Finally, the London dispersion interaction potential $V\e{L}$ is now the fluctua
 \begin{equation}\label{eq:london}
   V\e{L} = -\dfrac{\alpha_1\alpha_2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times1.5\dfrac{I_1 I_2}{I_1+I_2}
 \end{equation}
-where $I_1$ and $I_2$ are the first ionization energies. We can note that the Van der Waals potentials are all negative (attractive interaction) and depend on the inverse sixth power of the distance --- considering only the dipole moments. Before moving to the computational modelization of these long-distance intermolecular forces, we need to specify the repulsive force that occurs at very short distances; this force can be explained by the impossibility for electrons of both atoms to occupy the same quantum space as stated by Pauli in his exclusion principle.
+where $I_1$ and $I_2$ are the first ionization energies. We can note that the van der Waals potentials are all negative (attractive interaction) and depend on the inverse sixth power of the distance --- considering only the dipole moments. Before moving to the computational modelization of these long-distance intermolecular forces, we need to specify the repulsive force that occurs at very short distances; this force can be explained by the impossibility for electrons of both atoms to occupy the same quantum space as stated by Pauli in his exclusion principle.
 
-For the system we are studying in this thesis, the adsorption of noble gases in nanoporous materials, the guest--guest and guest--host interactions can be described by the induction and dispersion interactions only. We will use a simplistic model, the Lennard-Jones (LJ) potential $V\e{LJ}$,\autocite{LJ_1924} that relies on a repulsive term for the Pauli exclusion principle and an attractive term to model the attractive Van der Waals component of the interaction, as shown below:
+For the system we are studying in this thesis, the adsorption of noble gases in nanoporous materials, the guest--guest and guest--host interactions can be described by the induction and dispersion interactions only. We will use a simplistic model, the Lennard-Jones (LJ) potential $V\e{LJ}$,\autocite{LJ_1924} that relies on a repulsive term for the Pauli exclusion principle and an attractive term to model the attractive van der Waals component of the interaction, as shown below:
 \begin{equation}\label{eq:LJ}
   V\e{LJ} = 4\epsilon \left(\left(\dfrac{\sigma}{r}\right)^{12} - \left(\dfrac{\sigma}{r}\right)^{6}\right)
 \end{equation}
@@ -253,7 +253,7 @@ Now that we defined the exchange Gibbs free energy and an exchange enthalpy at a
   }
 \end{equation}
 
-Before concluding this methodological section, we need to note that the thermodynamic quantities associated to this newly defined adsorption exchange equilibrium can be defined at different pressures and different methodologies can be used to calculate them. At infinite dilution, we would preferably use Widom insertions and the adsorption free energies and enthalpies to deduce these exchange quantities; at higher pressure, we would use the GCMC calculation to define a free energy (via the loading values) and the isosteric adsorption heat to define them. In the following study, we will focus on only two pressures: the ambient pressure (at \SI{1}{\atm}) and the limit of zero loading (infinite dilution). At \SI{1}{\atm}, the previously defined quantities will have an index $1$ to differentiate them from the infinite dilution case where an index $0$ will be used; for example, $\Delta\e{ads}H\e{1}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{1}\ex{Xe/Kr}$ or $s\e{1}\ex{Xe/Kr}$ at \SI{1}{\atm}, and $\Delta\e{ads}H\e{0}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{0}\ex{Xe/Kr}$ or $s\e{0}\ex{Xe/Kr}$ at the low-pressure limit. One final note on the simulation details, to run the GCMC calculations and the Widom insertion, we used the Raspa2 software developed by Dubbeldam et al.\autocite{dubbeldam2016} And, the intermolecular Van der Waals interactions were described by a Lennard-Jones (LJ) potential with a cutoff distance of \SI{12}{\angstrom}. The LJ parameters of the framework atoms are given by the universal force field (UFF),\autocite{rappe1992} and the guest atoms (xenon and krypton) have their LJ parameters taken from a previous screening study.\autocite{Ryan_2010} All the MOFs described here are taken from the CoRE MOF 2019 database.\autocite{Chung_2019}
+Before concluding this methodological section, we need to note that the thermodynamic quantities associated to this newly defined adsorption exchange equilibrium can be defined at different pressures and different methodologies can be used to calculate them. At infinite dilution, we would preferably use Widom insertions and the adsorption free energies and enthalpies to deduce these exchange quantities; at higher pressure, we would use the GCMC calculation to define a free energy (via the loading values) and the isosteric adsorption heat to define them. In the following study, we will focus on only two pressures: the ambient pressure (at \SI{1}{\atm}) and the limit of zero loading (infinite dilution). At \SI{1}{\atm}, the previously defined quantities will have an index $1$ to differentiate them from the infinite dilution case where an index $0$ will be used; for example, $\Delta\e{ads}H\e{1}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{1}\ex{Xe/Kr}$ or $s\e{1}\ex{Xe/Kr}$ at \SI{1}{\atm}, and $\Delta\e{ads}H\e{0}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{0}\ex{Xe/Kr}$ or $s\e{0}\ex{Xe/Kr}$ at the low-pressure limit. One final note on the simulation details, to run the GCMC calculations and the Widom insertion, we used the Raspa2 software developed by Dubbeldam et al.\autocite{dubbeldam2016} And, the intermolecular van der Waals interactions were described by a Lennard-Jones (LJ) potential with a cutoff distance of \SI{12}{\angstrom}. The LJ parameters of the framework atoms are given by the universal force field (UFF),\autocite{rappe1992} and the guest atoms (xenon and krypton) have their LJ parameters taken from a previous screening study.\autocite{Ryan_2010} All the MOFs described here are taken from the CoRE MOF 2019 database.\autocite{Chung_2019}
 
 %%%%%%
 
@@ -263,7 +263,7 @@ As we have seen above in the existing literature, the computational screening of
 
 \subsection{Structure--selectivity relationships}\label{sct:geometry}
 
-An adsorption separation process is primarily characterized by a pivotal performance metric called the selectivity we defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\autocite{Zeo++} we want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\autocite{vol_Ongari2017} and the diameter of the largest included sphere ($D_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\autocite{Hung_2021} we defined a list of Van der Waals radii to be read by the Zeo++ software (more details in \url{https://github.com/eren125/zeopp_radtable}). All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k\e{B} T/2$, for $T = \SI{298}{\kelvin}$.
+An adsorption separation process is primarily characterized by a pivotal performance metric called the selectivity we defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\autocite{Zeo++} we want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\autocite{vol_Ongari2017} and the diameter of the largest included sphere ($D_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\autocite{Hung_2021} we defined a list of van der Waals radii to be read by the Zeo++ software (more details in \url{https://github.com/eren125/zeopp_radtable}). All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k\e{B} T/2$, for $T = \SI{298}{\kelvin}$.
 
 \subsubsection{Xenon uptake and selectivity}
 
