--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -21,7 +21,7 @@ Experiment? \todo{reprendre la review daglar}
 Fast kinetic Monte Carlo
 tutrast\autocite{Mace_2019}
 
-\section{ML modeling}
+\subection{ML modeling}
 
 Results
 
@@ -29,7 +29,7 @@ Results
 
 \subsection{Why studying diffusion for xenon krypton}
 
-\todo{kinetic KAXQIL}
+\todo{kinetic KAXQIL problem}
 
 \subsection{Correlations}
 
@@ -43,7 +43,7 @@ Results
 
 \todo{Take some examples for the vizualisation with comparison to the pore size and diffusion coefficient}
 
-\subsection{ML model training}
+\subsection{Development of a first prediction model}
 
 \begin{figure}[ht]
   \centering
