--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -5,6 +5,13 @@
 
 \chapter{Towards the next generation of screenings}
 \vspace*{-1\baselineskip}
+
+\section{Limits of the Current Screening Methodologies}
+
+\todo{put graph comparing experiment and UFF}
+
+The beginning of some explication
+
 \section{Flexibility}
 Final screening step, easy integration into the workflow of current sreenings
 \subsection{Problem, literature}
@@ -24,6 +31,8 @@ Talk about the order of magnitude of the different interactions > charge--(induc
 Standard methods failing to describe oms\autocite{Perry_2014} 
 
 \todo{faire référence à 2-thermo partie sur les interactions\ref{sct:interaction}}
+
+
 
 
 \subsection{Studying the polarization}
