--- a/1-screening.tex
+++ b/1-screening.tex
@@ -282,9 +282,9 @@ The industrial interest for noble gases lies first in the many applications atta
 The role of a dispatchable source of low-carbon energy can only be fulfilled by batteries charged by renewable energies (wind or solar) or by nuclear plants. However, one of the major criticisms on this source of energy concerns the management of the radioactive waste. As promising technologies in gas separation emerge, there is an increasing need for a solution for the release of very small amount of radioactive off-gases like Kr\e{85} from nuclear spent fuels.\autocite{Blomeke_1969} Furthermore, stable xenon isotopes are also produced in these spent nuclear fuels, which can be used in all the above-mentioned applications. In the context of a regained interest in nuclear energy, the fourth generation nuclear plants are projected to be built on other technologies such as the light water or the molten salt technologies.\autocite{LeBlanc_2010} Molten salt reactors would continuously produce xenon and radioactive krypton in the electricity generation process.\autocite{Riley_2019} The development of gas separation units in these facilities would represent a promising source for xenon production. Yet, we can laboriously imagine deploying standard cryogenic distillation units in a nuclear facility for obvious security reasons. Consequently, nanoporous materials are considered as the alternative technology for xenon/krypton separation. Zeolites are already used as a pre-purification system,\autocite{kerry2007industrial} and they are now projected to be used as a standalone separation system. 
 
 \begin{figure}[ht]
-  \includegraphics[width=0.49\textwidth]{figures/1-screening/Kr_treatment.jpg}
-  \includegraphics[width=0.49\textwidth]{figures/1-screening/MSR_noble_gas.jpg}
-  \caption{Representation of xenon/krypton separation process using porous materials in a nuclear fuel reprocessing plant and in a molten salt reactor. Reprinted with permission from reference \cite{Banerjee_2014} copyright \copyright (2014) American Chemical Society and reference \cite{Riley_2019} copyright \copyright (2019) Elsevier.}
+  \includegraphics[width=0.42\textwidth]{figures/1-screening/Kr_treatment.jpg}
+  \includegraphics[width=0.55\textwidth]{figures/1-screening/MSR_noble_gas.jpg}
+  \caption{Representation of xenon/krypton separation process using porous materials in a nuclear fuel reprocessing plant and in a molten salt reactor. Reprinted with permission from Ref.~\cite{Banerjee_2014} copyright \copyright (2014) American Chemical Society and Ref.~\cite{Riley_2019} copyright \copyright (2019) Elsevier.}
   \label{fgr:industrial}
 \end{figure}
 
