--- a/4-ml.tex
+++ b/4-ml.tex
@@ -24,6 +24,11 @@ In this example, we can see how the machine learned the value of each moves by c
 
 In this thesis, we will focus on the most common way of statistically learning from data, which is the supervised learning. As previously introduced, supervised learning corresponds to the extraction of a relationship between the labels of a set of data points and some of their known characteristics or features. This relationship can be called the model or the predictor and should ideally generalize to similar but unseen data. In this section, we will formalize the goal of the learning algorithm when given a set of labeled data in order to introduce more complex notions in machine learning like the bias--variance trade-off and also more specific models that will be used in this chapter like the tree-based models.
 
+\subsubsection{Mathematical considerations}
+
+\todo{HERE}
+Le ML appliqué à l'apprentissage supervisé, c'est donc avant tout l'art d'exploiter des données: on note $\mathcal{D}_{n}:=((X_{1},Y_{1}),...,(X_{n},Y_{n}))$ un {jeu de données} comportant $n$ observations indépendantes et identiquement distribuées d'une loi $\mathcal{P}$, où $X_{i}$ est un vecteur de $\mathbb{R}^{p}$ ($p$ étant un entier naturel non nul) et $Y_{i}$ appartient à un ensemble $\mathcal{Y}$ de données (numériques ou non). On note $\textbf{X}:=(X_1,\ldots,X_n)$ et $\textbf{Y}:=(Y_1,\ldots,Y_n)$. Un \emph{prédicteur} est alors une fonction $f$ définie de $\left(\mathbb{R}^{p}\right)^n$ dans $\mathcal{Y}^n$. On définit ensuite une \emph{fonction de perte} $\mathcal L$ de $\left(\mathcal{Y}^n\right)^2$ dans $\mathbb{R}_{+}$: $\mathcal L(\textbf{Y}',\textbf{Y})$ représente alors le coût d'avoir prédit $\textbf{Y}'$ au lieu de $\textbf{Y}$. En particulier, le \emph{risque d'un prédicteur}, à savoir ${R(f(\textbf{X}),\textbf{Y}) = \E{\mathcal L(f(\textbf{X}),\textbf{Y})|((X_{1},Y_{1}),...,(X_{n},Y_{n}))\sim\mathcal P}}$ représente le coût d'avoir prédit $f(\textbf{X})$ au lieu de la valeur observée $\textbf{Y}$. Notons $(Y_1',\ldots,Y_n'):=f(\textbf{X})$ les valeurs de $(Y_1,\ldots,Y_n)$ prédites par le programme de ML à partir des données $\textbf{X}$. L'objectif de l'apprentissage supervisé est alors de choisir le prédicteur $f^*$ rendant ce risque minimal: autrement dit, on doit avoir ${f^*=\underset{f\in\mathcal F\left({(\mathbb{R}^p)}^n;\mathcal Y^n\right)}{\text{arg min}} R(f(\textbf{X}),\textbf{Y})}$. \vspace{-13pt}En particulier, lorsque $(Y_1,\ldots,Y_n)$ est un jeu de données binaires (lorsqu'on a $\mathcal Y=\{0,1\}$), la fonction de perte est définie par $\ell(\textbf{Y}',\textbf{Y})=\dfrac{\mathds 1_{Y_1\ne Y'_1}+\cdots+\mathds 1_{Y_n\ne Y'_n}}{n}$ en général: on calcule la fréquence des mauvaises prédictions au sein du jeu de $n$ données. On peut alors prouver que l'estimateur optimal $f^*$ vérifie $f^*(\textbf{X})=\mathds 1_{\E{\textbf{Y}|\textbf{X}}\geq 1/2}$. Mais comme on ne connaît généralement pas avec précision la loi de $\mathcal D_n$, il conviendra de proposer un estimateur $\widehat{\gamma}(\textbf{X})$ de $\E{\textbf{Y}|\textbf{X}}$. 
+
 \todo{compare to the optimization of molecular structure in an \emph{ab intio} simulation. Find a minimum, gradient descent}
 
 The Elements of Statistial Learning\autocite{Hastie_2009}
