--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -21,7 +21,7 @@ Experiment? \todo{reprendre la review daglar}
 Fast kinetic Monte Carlo
 tutrast\autocite{Mace_2019}
 
-\subection{ML modeling}
+\subsection{ML modeling}
 
 Results
 
