--- a/main.tex
+++ b/main.tex
@@ -276,6 +276,7 @@
 
 %TODO Clean what's not needed
 
+\newcommand{\E}[1]{\ensuremath{\mathbb{E}{\left[#1\right]}}}
 % Convenience macros
 %% Math stuff
 %\let\phi\varphi
